--- a/src/index.css
+++ b/src/index.css
@@ -34,7 +34,18 @@ body {
   margin-bottom: 20px;
   color: var(--primary-color);
 }
-
+.header .aboutlink{
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  margin: 5px;
+  border-radius: 0px;
+  cursor: pointer;
+  text-decoration: none;
+  font-size: 15px;
+  font-family: inherit;
+  background: #0b5daa;
+}
 .btn {
   display: inline-block;
   background: var(--success-color);
@@ -128,7 +139,12 @@ body {
   height: 20px;
 }
 
-footer {
+footer  {
+  color: var(--primary-color);
+  position: relative;
   margin-top: 30px;
+  margin-bottom: 0;
   text-align: center;
+  text-decoration: none;
+  font-weight: 800;
 }
