--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ body {
 }
 
 .container {
-  max-width: 60%;
+  width: 65%;
   margin: 30px auto;
   overflow: auto;
   min-height: 300px;
@@ -25,8 +25,14 @@ body {
   background: #c6dbee;
   padding: 30px;
   border-radius: 0px;
-}
+  display: block;
+  /*position: absolute;*/
+  z-index: auto;
 
+
+
+}
+ 
 .header {
   display: flex;
   justify-content: space-between;
@@ -148,3 +154,36 @@ footer  {
   text-decoration: none;
   font-weight: 800;
 }
+.about{
+border: 5px solid red;
+padding: 5px;
+margin: 10px;
+display: flexbox;
+
+}
+.about li{
+border: 3px solid rgb(34, 11, 209);
+margin-left: 15px;
+padding:10px 20px;
+position: relative;
+}
+
+  /* Desktops and laptops ----------- */
+  @media only screen
+  and (min-width : 1224px) {
+    .container {
+      left: 0;
+      width: 90%;
+      z-index: auto;
+    }
+  }
+
+
+  @media only screen
+  and (max-width : 1224px) {
+    .container {
+      left: 0;
+      width: 98%;
+      z-index: auto;
+    }
+  }
